data cleaning world emissions mejorado

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +232,7 @@
        "[5 rows x 268 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
        "(231, 268)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
        "       'Zimbabwe'], dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -363,6 +363,7 @@
        "      <th></th>\n",
        "      <th>Year</th>\n",
        "      <th>CO2_Tonnes</th>\n",
+       "      <th>CO2_MillionTonnes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -370,41 +371,46 @@
        "      <th>1</th>\n",
        "      <td>1751</td>\n",
        "      <td>93505.28</td>\n",
+       "      <td>0.093505</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1752</td>\n",
        "      <td>187047.20</td>\n",
+       "      <td>0.187047</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1753</td>\n",
        "      <td>280589.12</td>\n",
+       "      <td>0.280589</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1754</td>\n",
        "      <td>374167.68</td>\n",
+       "      <td>0.374168</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>1755</td>\n",
        "      <td>467782.88</td>\n",
+       "      <td>0.467783</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Year  CO2_Tonnes\n",
-       "1  1751    93505.28\n",
-       "2  1752   187047.20\n",
-       "3  1753   280589.12\n",
-       "4  1754   374167.68\n",
-       "5  1755   467782.88"
+       "   Year  CO2_Tonnes  CO2_MillionTonnes\n",
+       "1  1751    93505.28           0.093505\n",
+       "2  1752   187047.20           0.187047\n",
+       "3  1753   280589.12           0.280589\n",
+       "4  1754   374167.68           0.374168\n",
+       "5  1755   467782.88           0.467783"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,12 +422,13 @@
     "world_emissions.columns=['Year','CO2_Tonnes']\n",
     "world_emissions=world_emissions.drop(axis=0,index=0)\n",
     "world_emissions['CO2_Tonnes']=world_emissions['CO2_Tonnes'].map(lambda x: x/1E2)\n",
+    "world_emissions['CO2_MillionTonnes']=world_emissions['CO2_Tonnes'].map(lambda x: x/1E6)\n",
     "world_emissions.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -446,62 +453,62 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Year</th>\n",
-       "      <th>CO2_Tonnes</th>\n",
+       "      <th>CO2_MillionTonnes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>263</th>\n",
        "      <td>2013</td>\n",
-       "      <td>1.430000e+10</td>\n",
+       "      <td>14300.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>264</th>\n",
        "      <td>2014</td>\n",
-       "      <td>1.470000e+10</td>\n",
+       "      <td>14700.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>265</th>\n",
        "      <td>2015</td>\n",
-       "      <td>1.500000e+10</td>\n",
+       "      <td>15000.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>266</th>\n",
        "      <td>2016</td>\n",
-       "      <td>1.540000e+10</td>\n",
+       "      <td>15400.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>267</th>\n",
        "      <td>2017</td>\n",
-       "      <td>1.580000e+10</td>\n",
+       "      <td>15800.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Year    CO2_Tonnes\n",
-       "263  2013  1.430000e+10\n",
-       "264  2014  1.470000e+10\n",
-       "265  2015  1.500000e+10\n",
-       "266  2016  1.540000e+10\n",
-       "267  2017  1.580000e+10"
+       "     Year  CO2_MillionTonnes\n",
+       "263  2013            14300.0\n",
+       "264  2014            14700.0\n",
+       "265  2015            15000.0\n",
+       "266  2016            15400.0\n",
+       "267  2017            15800.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clean.rounding(world_emissions)\n",
-    "world_emissions=world_emissions[['Year','CO2_Tonnes']]\n",
+    "world_emissions=world_emissions[['Year','CO2_MillionTonnes']]\n",
     "world_emissions.tail()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +524,7 @@
        "'world_emissions has been exported to cvs file'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
