avanzando self_choice, borro antiguos cvs que no valen

--- a/self_choice.ipynb
+++ b/self_choice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Use man.open_df to select the DataFrame you want to take out conclusions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' \\n    This function opens a DataFrame from src folder in the project. \\n    No parameters are needed, except of the name the function will ask you\\n    '"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "man.open_df.__doc__"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -24,8 +51,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Please, enter the name for the cvs file you want to open without extension:\n",
-      "register\n"
+      "Hi! Which topic would you like to know about?\n",
+      "-Worldwide CO2 emissions in History, \n",
+      "-Different vehicle types CO2 emissions \n",
+      "-Or Registered vehicles worldwide along time?\n",
+      "Set 'world_emissions' for the first one, 'vehicles' for the second one or 'register' for the last one\n",
+      "Please, enter the name for the DataFrame you want to open without extension:\n",
+      "world_emissions\n"
      ]
     },
     {
@@ -49,98 +81,86 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Country</th>\n",
        "      <th>Year</th>\n",
-       "      <th>Number_of_registered_vehicles</th>\n",
+       "      <th>CO2_MillionTonnes</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Albania</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>563106</td>\n",
+       "      <td>1751</td>\n",
+       "      <td>0.09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Antigua and Barbuda</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>36030</td>\n",
+       "      <td>1752</td>\n",
+       "      <td>0.19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Argentina</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>21633587</td>\n",
+       "      <td>1753</td>\n",
+       "      <td>0.28</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Australia</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>18326236</td>\n",
+       "      <td>1754</td>\n",
+       "      <td>0.37</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Austria</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>7421647</td>\n",
+       "      <td>1755</td>\n",
+       "      <td>0.47</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>130</th>\n",
-       "      <td>United Republic of Tanzania</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>2163623</td>\n",
+       "      <th>262</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>14300.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>131</th>\n",
-       "      <td>United States of America</td>\n",
+       "      <th>263</th>\n",
+       "      <td>2014</td>\n",
+       "      <td>14700.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>264</th>\n",
        "      <td>2015</td>\n",
-       "      <td>281312446</td>\n",
+       "      <td>15000.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>132</th>\n",
-       "      <td>Uruguay</td>\n",
+       "      <th>265</th>\n",
        "      <td>2016</td>\n",
-       "      <td>2342026</td>\n",
+       "      <td>15400.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>133</th>\n",
-       "      <td>Venezuela (Bolivarian Republic of)</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>7999760</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>134</th>\n",
-       "      <td>Viet Nam</td>\n",
-       "      <td>2016</td>\n",
-       "      <td>50666855</td>\n",
+       "      <th>266</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>15800.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>135 rows × 3 columns</p>\n",
+       "<p>267 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                Country  Year  Number_of_registered_vehicles\n",
-       "0                               Albania  2016                         563106\n",
-       "1                   Antigua and Barbuda  2016                          36030\n",
-       "2                             Argentina  2016                       21633587\n",
-       "3                             Australia  2016                       18326236\n",
-       "4                               Austria  2016                        7421647\n",
-       "..                                  ...   ...                            ...\n",
-       "130         United Republic of Tanzania  2016                        2163623\n",
-       "131            United States of America  2015                      281312446\n",
-       "132                             Uruguay  2016                        2342026\n",
-       "133  Venezuela (Bolivarian Republic of)  2016                        7999760\n",
-       "134                            Viet Nam  2016                       50666855\n",
+       "     Year  CO2_MillionTonnes\n",
+       "0    1751               0.09\n",
+       "1    1752               0.19\n",
+       "2    1753               0.28\n",
+       "3    1754               0.37\n",
+       "4    1755               0.47\n",
+       "..    ...                ...\n",
+       "262  2013           14300.00\n",
+       "263  2014           14700.00\n",
+       "264  2015           15000.00\n",
+       "265  2016           15400.00\n",
+       "266  2017           15800.00\n",
        "\n",
-       "[135 rows x 3 columns]"
+       "[267 rows x 2 columns]"
       ]
      },
      "execution_count": 3,
@@ -149,8 +169,15 @@
     }
    ],
    "source": [
-    "man.open_df() \n"
+    "man.open_df()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
