renombro input cvs canada y sigo con self choice

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -709,7 +709,7 @@
    "source": [
     "vehicles = man.open_cvs()\n",
     "vehicles.head()\n",
-    "##CO2_vehicles_Emissions_Canada is the file in input folder"
+    "##CO2_vehicles_Emissions is the file in input folder"
    ]
   },
   {
