--- a/self_choice.ipynb
+++ b/self_choice.ipynb
@@ -8,18 +8,15 @@
    "source": [
     "#we import libraries as necessary\n",
     "import pandas as pd\n",
-    "import re\n",
-    "import src.cleaning as clean\n",
-    "import src.manipulating_df as man\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import src.self_choice as choice\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Use man.open_df to select the DataFrame you want to take out conclusions"
+    "### Use man.open_df to select the DataFrame you want to take conclusions out"
    ]
   },
   {
@@ -30,7 +27,7 @@
     {
      "data": {
       "text/plain": [
-       "' \\n    This function opens a DataFrame from src folder in the project. \\n    No parameters are needed, except of the name the function will ask you\\n    '"
+       "\"\\n    This function opens a DataFrame from src folder in the project.\\n    No parameters are needed, except of the name the function will ask you\\n    Don't forget to add .head() please!\\n    \""
       ]
      },
      "execution_count": 2,
@@ -56,7 +53,7 @@
       "-Different vehicle types CO2 emissions \n",
       "-Or Registered vehicles worldwide along time?\n",
       "Set 'world_emissions' for the first one, 'vehicles' for the second one or 'register' for the last one\n",
-      "Please, enter the name for the DataFrame you want to open without extension:\n",
+      "Please, enter the name for the DataFrame you want to open from the list above:\n",
       "world_emissions\n"
      ]
     },
@@ -111,56 +108,17 @@
        "      <td>1755</td>\n",
        "      <td>0.47</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>262</th>\n",
-       "      <td>2013</td>\n",
-       "      <td>14300.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>263</th>\n",
-       "      <td>2014</td>\n",
-       "      <td>14700.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>264</th>\n",
-       "      <td>2015</td>\n",
-       "      <td>15000.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>265</th>\n",
-       "      <td>2016</td>\n",
-       "      <td>15400.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>266</th>\n",
-       "      <td>2017</td>\n",
-       "      <td>15800.00</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>267 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     Year  CO2_MillionTonnes\n",
-       "0    1751               0.09\n",
-       "1    1752               0.19\n",
-       "2    1753               0.28\n",
-       "3    1754               0.37\n",
-       "4    1755               0.47\n",
-       "..    ...                ...\n",
-       "262  2013           14300.00\n",
-       "263  2014           14700.00\n",
-       "264  2015           15000.00\n",
-       "265  2016           15400.00\n",
-       "266  2017           15800.00\n",
-       "\n",
-       "[267 rows x 2 columns]"
+       "   Year  CO2_MillionTonnes\n",
+       "0  1751               0.09\n",
+       "1  1752               0.19\n",
+       "2  1753               0.28\n",
+       "3  1754               0.37\n",
+       "4  1755               0.47"
       ]
      },
      "execution_count": 3,
@@ -169,7 +127,7 @@
     }
    ],
    "source": [
-    "man.open_df()"
+    "man.open_df().head()"
    ]
   },
   {
