data cleaning terminado reiniciado kernell

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -8,23 +8,21 @@
    "source": [
     "#we import libraries as necessary\n",
     "import pandas as pd\n",
-    "import re\n",
     "import src.cleaning as clean\n",
     "import src.manipulating_df as man\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We open the first dataset about GHG emissions worldwide"
+    "### We clean the first dataset about CO2 emissions worldwide"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +230,7 @@
        "[5 rows x 268 columns]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +252,7 @@
        "(231, 268)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +324,7 @@
        "       'Zimbabwe'], dtype=object)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -410,13 +408,13 @@
        "5  1755   467782.88           0.467783"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "##we want to see the evolution of the emissions worldwide though time\n",
+    "##we want to see the evolution of the emissions worldwide through time\n",
     "world_emissions=emissions1[emissions1['Country']=='World'].T\n",
     "world_emissions=world_emissions.reset_index()\n",
     "world_emissions.columns=['Year','CO2_Tonnes']\n",
@@ -428,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +493,7 @@
        "267  2017            15800.0"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +522,7 @@
        "'world_emissions has been exported to cvs file'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -538,12 +536,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We open the second dataset about vehicles' emissions"
+    "### We clean the second dataset about vehicles' CO2 emissions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +551,7 @@
       "Please, enter the folder where your cvs file is saved:\n",
       "input\n",
       "Please, enter the name for the cvs file you want to open without extension:\n",
-      "CO2_vehicles_Emissions_Canada\n"
+      "CO2_vehicles_Emissions\n"
      ]
     },
     {
@@ -701,7 +699,7 @@
        "4                           27                  244  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -714,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -723,19 +721,19 @@
        "(7385, 12)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#we explore data i for further understanding\n",
+    "#we explore data for further understanding\n",
     "vehicles.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -883,21 +881,21 @@
        "4                           27                  244  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#we will rename columns removing blank spaces to avoid  problems in future by calling a function from the\n",
-    "# file columns.py\n",
+    "# file cleaning.py\n",
     "clean.rename_columns(vehicles)\n",
     "vehicles.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -913,7 +911,7 @@
        "'vehicles has been exported to cvs file'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,12 +925,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We open the last dataset, about registered vehicles in the world"
+    "### We clean the last dataset, about registered vehicles in the world"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1019,7 @@
        "4              Armenia                                              NaN"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1114,14 +1112,14 @@
        "4              Armenia                                              NaN"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#we will rename columns removing blank spaces to avoid  problems in future by calling a function from the\n",
-    "# file columns.py\n",
+    "# file cleaning.py\n",
     "clean.rename_columns(register)\n",
     "register.head()"
    ]
